--- a/CRUDBLAZOR/Pages/_Host.cshtml
+++ b/CRUDBLAZOR/Pages/_Host.cshtml
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="CRUDBLAZOR.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
