--- a/CRUDBLAZOR/Pages/EstadisticasVacuna/VacunadosPorSigno.razor
+++ b/CRUDBLAZOR/Pages/EstadisticasVacuna/VacunadosPorSigno.razor
@@ -2,7 +2,7 @@
 @inject IDataAccess _data
 @inject IConfiguration _config
 
-<h3>Vacunados Por Signo</h3>
+<h3>VACUNADOS POR SIGNOS</h3>
 
 
 @if (VacunadosSignos == null)
