--- a/CRUDBLAZOR/Pages/RegistrosDatos/RegistroPersonas/Persona.razor
+++ b/CRUDBLAZOR/Pages/RegistrosDatos/RegistroPersonas/Persona.razor
@@ -1,10 +1,7 @@
 ﻿@page "/Persona"
+@inherits PersonaBase
 
-@inject IDataAccess _data
-@inject IConfiguration _config
-
-<h3>Personas</h3>
-
+<h3>PERSONAS</h3>
 
 <div class="container-fluid">
 
@@ -38,28 +35,6 @@
                         <label for="cedula">Fecha Nacimiento</label>
                         <input class="form-control" type="date" @bind="@OPersona.Fecha_nacimiento" format-value="yyyy-MM-dd" />
                     </div>
-
-                    @*<div class="form-group  col-sm-12  col-xl-6">
-                        <label for="provinciaId">Provincia</label>
-                        <select class="form-control" @bind="OPersona.ProvinciaI">
-
-                            @if (_cboProvincia != null)
-                            {
-                                <option value="0">--SELECCIONE--</option>
-                                @foreach (var p in _cboProvincia)
-                                {
-                                    <option value="@p.ID_Provincia">@p.Nombre</option>
-
-                                }
-                            }
-                            else
-                            {
-                                <option value="0">--No hay Data--</option>
-
-
-                            }
-                        </select>
-                    </div>*@
                     <div class="form-group col-12 col-xl-6">
                         <label for="cedula">Signo Zodiacal</label>
                         <select @bind="@OPersona.Signo_Id" class="form-control">
@@ -70,34 +45,23 @@
                                 @foreach (var p in _cboSignoZod)
                                 {
                                     <option value="@p.Id">@p.Nombre</option>
-
                                 }
                             }
                             else
                             {
                                 <option value="0">--No hay Data--</option>
                             }
-
                         </select>
-
                     </div>
                     <div clas="form-group col-12 col-xl-6">
                         <button type="submit" class="btn btn-primary">Agregar Persona</button>
                         <button class="btn btn-primary" @onclick="UpdateData">Modificar Persona</button>
                     </div>
-
                 </div>
             </EditForm>
-
-
         </div>
-
     </div>
-
 </div>
-
-
-
 
 @if (personas == null)
 {
@@ -142,69 +106,6 @@ else
                     </tbody>
                 </table>
             </div>
-
         </div>
     </div>
-}
-
-
-
-@code {
-
-    private PersonaModel OPersona = new();
-
-    private static bool ModoEditar = false;
-
-
-    List<dynamic> personas;
-    private List<ComboBoxProvinciaModel> _cboProvincia;
-    private List<ComboBoxSignoZodModel> _cboSignoZod;
-
-    int AnswerServer;
-
-
-    private async Task LoadEditar(string Cedula)
-    {
-
-        string query = "SELECT * FROM PERSONA WHERE Cedula = @Cedula";
-
-        OPersona = await _data.LoadObject<PersonaModel, dynamic>(query, new { Cedula = Cedula }, _config.GetConnectionString("default"));
-
-    }
-
-    private async Task InsertData()
-    {
-        string query = "SP_AGREGAR_PERSONA @Cedula, @Nombre, @Apellido, @Telefono, @Fecha_nacimiento, @Signo_Id";
-
-        AnswerServer = await _data.SaveData<dynamic>(query, OPersona, _config.GetConnectionString("default"));
-        OnInitialized();
-    }
-
-    private async Task UpdateData()
-    {
-        string query = "Update Personas set Nombre=@Nombre,Apellido=@Apellido,Telefono=@Telefono,FechaNacimiento=@FechaNacimiento,ProvinciaId=@ProvinciaId,SIGNOZODID=@SignoZodid Where Cedula= @Cedula";
-        AnswerServer = await _data.SaveData<PersonaModel>(query, OPersona, _config.GetConnectionString("default"));
-        await OnInitializedAsync();
-    }
-
-    private async Task DeleteData(dynamic Persona)
-    {
-        string query = "DELETE PERSONA Cedula= @Cedula";
-        AnswerServer = await _data.SaveData(query, new { Cedula = Persona.Cedula }, _config.GetConnectionString("default"));
-        await OnInitializedAsync();
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        string query = "SELECT * FROM PERSONA";
-        personas = await _data.LoadData<dynamic, dynamic>(query, new { }, _config.GetConnectionString("default"));
-
-        //query = "SELECT ID_Provincia, Nombre FROM PROVINCIAS";
-
-        //_cboProvincia = await _data.LoadData<ComboBoxProvinciaModel, dynamic>(query, new { }, _config.GetConnectionString("default"));
-
-        query = "SELECT Id, Nombre FROM SIGNO";
-
-        _cboSignoZod = await _data.LoadData<ComboBoxSignoZodModel, dynamic>(query, new { }, _config.GetConnectionString("default"));
-    }
 }
